Revert "Add systemtest property for number of bulk import jobs"
This reverts commit e6af7ede74e0747f2addb6bb4ac97fa0ce6417a8.